c4prj3_finish/grade.txt
Grading at Sun Mar 14 14:26:33 UTC 2021
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘main’:
main.c:61:9: error: ‘Ties’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if (compare_hands(Winner,Ties) == 0){
         ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
